<resources>
    <string name="app_name">Android Aquarium</string>
    <string name="aquarium_name">My Aquarium</string>

    <string name="selection_label">Choose your marine critter:</string>
    <string-array name="selection_array">
        <item>Stingray</item>
        <item>Moray Eel</item>
        <item>Sea Snake</item>
        <item>Frogfish</item>
        <item>Sea Slug</item>
    </string-array>

    <string name="selection_image_description">Ocean Floor</string>

    <string name="new_aquarium_button">New Aquarium</string>

    <string name="aquarium_image_description">Critter Image</string>
    <string name="feed_button">Feed</string>
    <string name="interact_button">Interact</string>
    <string name="clean_button">Clean</string>
</resources>
